@@ -3,7 +3,6 @@ package org.infinispan.configuration.global;
 import java.lang.reflect.Constructor;
 import java.util.ArrayList;
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.LinkedHashMap;
 import java.util.LinkedList;
 import java.util.List;
@@ -170,7 +169,7 @@ public class GlobalConfigurationBuilder implements GlobalConfigurationChildBuild
 
    @Override
    public List<Builder<?>> modules() {
-      return Collections.unmodifiableList(new ArrayList<>(modules.values()));
+      return List.copyOf(modules.values());
    }
 
    public <T> T module(Class<T> moduleClass) {
